# Promptwarsxscaler

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml  test_gemini.py
.github/workflows/: ci.yml
backend/: __init__.py  main.py  requirements-dev.txt  requirements.txt
backend/models/: schemas.py
backend/routers/: analyze.py
backend/scripts/: create_fixture_contract.py  seed_firestore.py
backend/services/: adversarial_engine.py  benchmark_rag.py  clause_classifier.py  consequence_engine.py  document_parser.py  enhanced_adversarial_engine.py  negotiation_engine.py  report_generator.py  risk_scorer.py
backend/tests/: conftest.py  test_adversarial.py  test_benchmark_rag.py  test_classifier.py  test_code_quality.py  test_consequence_engine.py  test_enhanced_adversarial_engine.py  test_gemini_client.py  test_integration.py  test_negotiation_engine.py  test_parser.py  test_report_generator.py  test_router.py  test_scorer.py  test_validators.py
backend/utils/: firestore_client.py  gcs_client.py  gemini_client.py  secret_manager.py  validators.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AdversarialDebate.jsx  AgentDebate.jsx  AnalysisProgress.jsx  CategoryHeatmap.jsx  ClauseCard.jsx  ConsequenceChain.jsx  NegotiationSuggest.jsx  Onboarding.jsx  OnboardingScreen.jsx  RiskDashboard.jsx  SplashScreen.jsx  UploadZone.jsx
